some transitions on dropdown
custom dropdown css may not be visable in some browsers bc this API is kinda new

--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -203,6 +203,11 @@ select,
 	font-size: 16px;
 	margin: 4px 2px;
 	border-radius: 4px;
+	transition: var(--transitionTime);
+}
+
+option {
+	transition: var(--transitionTime);
 }
 
 option::checkmark {
